# python-azure-ai-recognize-synthesize-speech

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/python-azure-ai-recognize-synthesize-speech/: .env.example  main.py
